--- a/index.html
+++ b/index.html
@@ -28,17 +28,21 @@
                 <img src="./assets/client-logo.jpg" />
             </div>
             <div class="bodywrap__form__title">Login</div>
+            <div id="err" class="err">
+                <img src="./assets/icons/error-red.svg" />
+                <span>Username or password is incorrect</span>
+            </div>
             <form class="form">
                 <div class="form__input-wrap">
                     <label>E-MAIL</label>
-                    <input type="email" placeholder="something@example.com" />
+                    <input id="username" type="email" placeholder="something@example.com" />
                 </div>
                 <div class="form__input-wrap">
                     <label>PASSWORD</label>
-                    <input type="password" placeholder="something you only know" />
+                    <input id="password" type="password" placeholder="something you only know" />
                 </div>
                 <div class="form__cta-wrap">
-                    <div class="btn btn-blue">Login</div>
+                    <div onclick="submit()" class="btn btn-blue">Login</div>
                     <div class="btn btn-outlineless-blue">Forgot password</div>
                 </div>
             </form>
