reset error fix

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                 <div id="emailInput" class="form__input-wrap">
                     <label>E-MAIL</label>
                     <input id="email" type="email" placeholder="something@example.com" />
+                    <div id="inputErr" class="input-err"></div>
                 </div>
                 <div class="form__cta-wrap">
                     <div id="btn" onclick="resetPass()" class="btn btn-blue">Send email</div>
